fix list-group button height on Firefox and Edge

--- a/src/components/list-group/list-group.scss
+++ b/src/components/list-group/list-group.scss
@@ -9,6 +9,12 @@
   }
 }
 
+:host(.classic), :host(.nav) {
+  button {
+    min-height: 47px;
+  }
+}
+
 :host(.collapsed) {
   .group-item {
     display: none;
